# vrchat-speech-assistant

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pylintrc  .releaserc.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MIRROR.md  README.md  pyproject.toml
.gitlab/issue_templates/: Bug.md  Feature.md
.gitlab/merge_request_templates/: Feature.md  Hotfix.md  Other.md  Refactor.md
docs/: README.md  automodapi.py
docs/source/: api.rst  conf.py  darkstyle.rst  languages.rst  providers.rst  utils.rst  widgets.rst
docs/source/api/: vrchat_speech_assistant.darkstyle.apply.rst  vrchat_speech_assistant.icons.qCleanupResources.rst  vrchat_speech_assistant.icons.qInitResources.rst  vrchat_speech_assistant.icons.qt_resource_data.rst  vrchat_speech_assistant.languages.VOICES.rst  vrchat_speech_assistant.main.CONFIG_FILE.rst  vrchat_speech_assistant.main.FONTS.rst  vrchat_speech_assistant.main.GOOGLE.rst  vrchat_speech_assistant.main.RESOURCES_PATH.rst  vrchat_speech_assistant.main.VOICES.rst  vrchat_speech_assistant.main.VRCSpeechAssistantWindow.rst  vrchat_speech_assistant.main.logger.rst  vrchat_speech_assistant.providers.read_ogg_file.rst  vrchat_speech_assistant.utils.test_deepl.rst  vrchat_speech_assistant.widgets.ConfigDialog.rst
src/vrchat_speech_assistant/: README.md  __init__.py  darkstyle.py  icons.py  languages.py  main.py  providers.py  utils.py  widgets.py
src/vrchat_speech_assistant/resources/: icons.qrc
